# orbit

./: .gitignore  PHASE1_COMPLETE.md  lefthook.yml  orbit_helper_python.py  package.json  pnpm-lock.yaml  test_orbit_helper.py
.github/: README.md
.github/workflows/: ci.yml
agent/oribit_agent/: .env.example  pyproject.toml  test_audit.py  test_phase2.py
agent/oribit_agent/src/oribit_agent/: __init__.py  audit_logger.py  browser.py  calendar_ops.py  cli.py  executor.py  file_ops.py  hybrid_planner.py  llm_planner.py  planner.py  schemas.py  server.py  spotify_ops.py  spotify_ops_new.py  spotify_ops_old.py  steps.py  tools.py
app/Orbit/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/Orbit/src/: App.css  App.tsx
app/Orbit/src-tauri/: tauri.conf.json
app/Orbit/src-tauri/capabilities/: default.json
app/Orbit/src/components/: Chat.tsx  CommandBar.tsx
app/Orbit/src/components/primitives/: tool-calling.tsx
app/Orbit/src/components/prompt-kit/: loader.tsx
helper/: OrbitHelper-binary
helper/OrbitHelper/OrbitHelper/: OrbitHelper.entitlements  main.swift
helper/OrbitHelper/OrbitHelper.xcodeproj/: project.pbxproj
infra/: build.sh
