[project]
name = "oribit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Varun Sendilraj", email = "varunsendil2003@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
    "websockets>=12.0",
    "playwright>=1.40.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "typer>=0.12.5",
    "spotipy>=2.22.1",
]

[project.scripts]
orbit = "oribit_agent:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
